force-app/main/default/objects/Standard_Billing_Schedule__mdt/Standard_Billing_Schedule__mdt.object-meta.xml
<CustomObject>
    <description>RUBX-3685 used to store standard Billing schedules</description>
    <label>Standard Billing Schedule</label>
    <pluralLabel>Standard Billing Schedules</pluralLabel>
</CustomObject>