force-app/main/default/objects/Standard_Billing_Schedule__mdt/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <description>RUBX-3685 billing milestone name</description>
    <label>Milestone Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>