force-app/main/default/objects/Standard_Billing_Schedule__mdt/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>RUBX-3685 Percentage for each billing milestone</description>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>