force-app/main/default/objects/Standard_Billing_Schedule__mdt/fields/ProdType__c.field-meta.xml
<CustomField>
    <fullName>ProdType__c</fullName>
    <description>RUBX-3685 ProdType for standard billing schedule</description>
    <label>ProdType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILF</fullName>
                <default>true</default>
                <label>ILF</label>
            </value>
            <value>
                <fullName>RLF</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>