force-app/main/default/objects/Standard_Billing_Schedule__mdt/listViews/Standard_Billing_Schedule.listView-meta.xml
<ListView>
    <fullName>Standard_Billing_Schedule</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Billing_Term__c</columns>
    <columns>Milestone_Name__c</columns>
    <columns>ProdType__c</columns>
    <columns>Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Standard Billing Schedule</label>
</ListView>